# Provevidence

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: autoresearch.mdc
.github/: copilot-instructions.md
.github/workflows/: autoresearch.yml
.repo-autoresearch/: PROMOTION.md  autoresearch_instructions.md  experiment.yaml
agent_prompt_autoresearch/: __init__.py  init_cli.py
agent_prompt_autoresearch/bundled/github/workflows/: autoresearch.yml
agent_prompt_autoresearch/bundled/repo_autoresearch/: autoresearch_instructions.md  experiment.yaml
agent_prompt_autoresearch/bundled/repo_autoresearch/reports/: state.json
agent_prompt_autoresearch/bundled/scripts/: autoresearch.py  validate_autoresearch.py
app/: hello.py
docs/: DEVELOPMENT.md
scripts/: autoresearch.py  create_gist.py  draft_challenger.py  get_variant.py  setup_test_repo.py
skill/: SKILL.md
skill/scripts/: get_variant.py
tests/: test_autoresearch_promotion.py  test_hello.py  test_init_cli.py
