[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-prompt-autoresearch"
version = "1.0.0"
description = "Multivariate testing for AI-generated pull requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
get-variant    = "scripts.get_variant:main"
autoresearch   = "scripts.autoresearch:main"
setup-test-repo = "scripts.setup_test_repo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
